test/libsolidity/syntaxTests/using/global_library_for_interface.sol
interface I {}
using L for I global;
library L {
}
// ----
// TypeError 8841: (15-36): Can only use "global" with user-defined types.
